Adding paragraph tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
     <center>
     <h1>Welcome to to-do list Application</h1>
+    <p> Hi I am Shashank Parab from Information system department.</p>
         </center>
 	    </body>
 	        </html>
