Adding Link Tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <center>
     <h1>Welcome to to-do list Application</h1>
     <p> Hi I am Shashank Parab from Information system department.</p>
+
+    <p><a href="http://www.njit.edu" target="_blank">Fall 2017</a></p>
         </center>
 	    </body>
 	        </html>
