--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <center>
+    
+  <center>
+  <img src="2016-155.jpg" style="width:450px;height:250px;">
+
+
     <h1>Welcome to to-do list Application</h1>
     <p> Hi I am Shashank Parab from Information system department.</p>
 
